# Mafia-Framework

./: .env.example  .gitignore  README.md  config.example.toml  pyproject.toml  requirements.txt
.claude/: launch.json
src/mafia_framework/: cli.py  paths.py
src/mafia_framework/analysis/tells/: __init__.py  alignment_keyword.py  base.py  caps.py  day_one.py  day_scoped.py  directed_talk.py  keyword.py  line_count.py  line_variation.py  normalization.py  opening.py  registry.py  timing.py  vote_count.py  vote_retention.py  vote_shift.py
src/mafia_framework/bot/: __init__.py  client.py  config.py  connection.py  strategy.py  tracker.py
src/mafia_framework/dashboard/: app.py
src/mafia_framework/data/: aliases.py  flips.py  models.py
src/mafia_framework/io/: google_docs.py  ingestion.py  parser.py  player_names.py
src/mafia_framework/models/: artifact.py  feature_engineering.py  naive_bayes.py
src/mafia_framework/services/: __init__.py  format_service.py  game_log_service.py  game_service.py  keyword_corpus.py  model_service.py  tell_service.py
tests/: test_aliases.py  test_bot.py  test_flips.py  test_google_docs.py  test_model.py  test_paths.py  test_player_names.py  test_services.py  test_tells.py  test_vote_shift.py
