[project]
name = "mafia-framework"
version = "0.1.0"
description = "A Mafia game analysis framework for Pokemon Showdown logs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [ { name = "Zorquax" } ]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
mafia-framework = "mafia_framework.cli:main"
mafia-dashboard = "mafia_framework.dashboard.app:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mafia_framework = ["data/*.json"]
